# idl2js

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
idl2js/: builder.py  converter.py  core.py  idl2js.py  idl_processor.py  logger.py  main.py  test.webidl  unparser.py
idl2js/js/: nodes.py
idl2js/webidl/: parser.py
