[tool.poetry]
name = "idl2js"
version = "0.1.0"
description = "Grammar-based Fuzzer that uses WebIDL as a grammar."
authors = ["Sergey Reshetnikov <resh.sersh@gmail.com>"]
license = "Apache-2.0"

readme = "README.md"
repository = "https://github.com/PrVrSs/idl2js"
homepage = "https://github.com/PrVrSs/idl2js"

keywords = [
    "WebIDL",
    "fuzzer",
    "ast",
    "grammar",
    "fuzzing",
    "transpiler",
]

[tool.poetry.dependencies]
python = "^3.10"

antlr4-python3-runtime = "^4.9.3"
attrs = "^21.4.0"
more-itertools = "^8.12.0"
stringcase = "^1.2.0"
click = "^8.0.4"
graphviz = "^0.19.1"

[tool.poetry.dev-dependencies]
mypy = "^0.931"
pylint = "^2.12.2"
pytest = "^7.0.1"
pytest-cov = "^3.0.0"

m2r = "^0.2.1"
Sphinx = "^4.4.0"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
